--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           github_token: ${{ secrets.DEPLOY_KEY }}
           publish_dir: ./dist
-          cname: 'seriuxmod.net'
+          cname: 'hoststudios.de'
